--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "private": true,
   "dependencies": {
     "@rails/webpacker": "^4.0.7",
+    "bootstrap": "^4.3.1",
+    "jquery": "^3.4.1",
+    "popper.js": "^1.15.0",
     "postcss-import": "^12.0.1",
     "tailwindcss": "^1.0.4"
   },
