--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "jquery": "^3.4.1",
     "popper.js": "^1.15.0",
     "postcss-import": "^12.0.1",
+    "sweetalert2": "^8.12.2",
     "tailwindcss": "^1.0.4"
   },
   "devDependencies": {
