--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
     "@rails/webpacker": "^4.0.7",
     "bootstrap": "^4.3.1",
     "jquery": "^3.4.1",
+    "moment": "^2.24.0",
     "popper.js": "^1.15.0",
     "postcss-import": "^12.0.1",
     "sweetalert2": "^8.12.2",
-    "tailwindcss": "^1.0.4"
+    "tailwindcss": "^1.0.4",
+    "tempusdominus-bootstrap-4": "^5.1.2"
   },
   "devDependencies": {
     "postcss-preset-env": "^6.6.0",
